--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "lodash": "^4.16.6",
     "volleyball": "^1.4.1"
   }
 }
