--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "lodash": "^4.16.6",
+    "morgan": "^1.7.0",
     "volleyball": "^1.4.1"
   }
 }
